apps/arr-stack/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: arr-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        kubernetes.io/hostname: optiplex
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:v3.41.3
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.1.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
              name: webui
            - containerPort: 6881
              protocol: TCP
              name: torrent-tcp
            - containerPort: 6881
              protocol: UDP
              name: torrent-udp
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: qbittorrent-downloads
              mountPath: /data/torrents
              subPath: torrents
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: data-pvc
